# CONVERTER/src/com/jalasoft/converter/model/image/image_to_images.py
@@ -1,5 +1,5 @@
 #
-# @image_to_images.py Copyright (c) 2021 Jalasoft.
+# @image_to_images.py Copyright (c) 2022 Jalasoft.
 # 2643 Av Melchor Perez de Olguin, Colquiri Sud, Cochabamba, Bolivia.
 # # All rights reserved.
 #
@@ -11,7 +11,6 @@
 #
 
 from model.converter import Converter
-from model.command_line import Command
 
 
 class ImageConverter(Converter):
@@ -21,52 +20,5 @@ class ImageConverter(Converter):
 
     def convert(self) -> list:
         """Converts image to any type, returns the command line"""
-        command_line = ['magick.exe', f'{self.input_file}', f'{self.output_file}']
+        command_line = ['magick', f'{self.input_file}', f'{self.output_file}']
         return " ".join(command_line)
-
-
-class ImageFlip(Converter):
-    """ Inherits Converter criteria"""
-    def __init__(self, input_file, output_file):
-        super().__init__(input_file, output_file)
-
-    def convert(self) -> list:
-        """Flips image horizontally, returns the command line"""
-        command_line = ['magick', f'{self.input_file}', '-flip', f'{self.output_file}']
-        return " ".join(command_line)
-
-
-class ImageRotate(Converter):
-    """ Inherits Converter criteria"""
-    def __init__(self, input_file, output_file, grades):
-        super().__init__(input_file, output_file)
-        self.grades = grades
-
-    def convert(self) -> list:
-        """Rotates image clockwise for a given value, returns the command line"""
-        command_line = ['magick', f'{self.input_file}', '-rotate', f'{self.grades}', f'{self.output_file}']
-        return " ".join(command_line)
-
-
-class ImageBW(Converter):
-    """ Inherits Converter criteria"""
-    def __init__(self, input_file, output_file):
-        super().__init__(input_file, output_file)
-
-    def convert(self) -> list:
-        """Converts image to black and white, returns the command line"""
-        command_line = ['magick', f'{self.input_file}', '-monochrome', f'{self.output_file}']
-        return " ".join(command_line)
-
-
-class ImageResize(Converter):
-    """ Inherits Converter criteria"""
-    def __init__(self, input_file, output_file, new_size):
-        super().__init__(input_file, output_file)
-        self.new_size = new_size
-
-    def convert(self) -> list:
-        """ Resizes image to a given % or values, returns the command line"""
-        command_line = ['magick', f'{self.input_file}', '-resize', f'{self.new_size}', f'{self.output_file}']
-        return " ".join(command_line)
-
