# CONVERTER/src/com/jalasoft/converter/model/video/video_to_video.py
@@ -1,5 +1,7 @@
-# @save_outputs.py Copyright (c) 2022 Jalasoft.
+#
+# @vconverter.py Copyright (c) 2022 Jalasoft.
 # 2643 Av Melchor Perez de Olguin, Colquiri Sud, Cochabamba, Bolivia.
+#
 # All rights reserved.
 #
 # This software is the confidential and proprietary information of
@@ -7,16 +9,16 @@
 # disclose such Confidential Information and shall use it only in
 # accordance with the terms of the license agreement you entered into
 # with Jalasoft.
+#
 
 from model.converter import Converter
 
 
-class SaveOutput(Converter):
-    """Inherits Converter criteria"""
+class VideoToVideo(Converter):
+    """Converts any video format to another video format""" 
     def __init__(self, input_file, output_file):
         super().__init__(input_file, output_file)
-
+    
     def convert(self):
-        """Creates and executes command to save an audio file in a specific path"""
-        cmd = f'MOVE "{self.input_file}" "{self.output_file}"' #mv en vez de MOVE
-        return cmd
+        """Converts video formats"""
+        return " ".join(['ffmpeg', '-i',  self.input_file, '-c:v copy -c:a copy -y', self.output_file])
